# pydantic-odm

./: .codecov.yml  .gitignore  .travis.yml  HISTORY.md  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
pydantic_odm/: __init__.py  db.py  errors.py  mixins.py  types.py
pydantic_odm/decoders/: mongodb.py
pydantic_odm/encoders/: mongodb.py
tests/: conftest.py  db.py  mixin.py  mixins.py  types.py
tests/decoders/: mongodb.py
tests/encoders/: mongodb.py
